--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sophie Jephson</title>
+    <title>River Jephson</title>
     <link rel="icon" src img="styles/Colan.png">
     <link rel="stylesheet" href="styles/styles.css">
     <script src="styles/main.js" defer></script>
@@ -14,7 +14,7 @@
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <h2>Sophie Jephson</h2> <br> <p>
+    <h2>River Jephson</h2> <br> <p>
 
     <div class="topnav">
         <a class="active" href="#home">Home</a>
